<resources>
	<string name="app_name">Lezzet</string>
	<string name="action_settings">Settings</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>

	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="recipes">Recipes</string>
	<string name="jokes">Jokes</string>
	<string name="favorites">Favorites</string>
	<string name="meal_type">Meal Type</string>
	<string name="country">Country</string>
	<string name="arabic">Arabic</string>
	<string name="american">American</string>
	<string name="british">British</string>
	<string name="italian">Italian</string>
	<string name="chinese">Chinese</string>
	<string name="mexican">Mexican</string>
	<string name="indian">Indian</string>
	<string name="side_dish">Side dish</string>
	<string name="dessert">dessert</string>
	<string name="salad">salad</string>
	<string name="breakfast">breakfast</string>
	<string name="drink">drink</string>
	<string name="marinade">marinade</string>
	<string name="beverage">beverage</string>
	<string name="soup">soup</string>
	<string name="search">Search</string>
	<string name="main_course">Main course</string>
	<string name="healthy">Healthy</string>
	<string name="cheap">Cheap</string>
	<string name="vegan">Vegan</string>
	<string name="title">Title</string>
	<string name="save">Save</string>
	<string name="added_to_favorites">Added to Favorites</string>
</resources>