<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ImageView
			android:id="@+id/gradient_image_view"
			android:layout_width="match_parent"
			android:layout_height="300dp"
			android:scaleType="centerCrop"
			android:src="@mipmap/ic_launcher"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<View
			android:id="@+id/view"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:background="@drawable/over_view_gradient"
			app:layout_constraintBottom_toBottomOf="@id/gradient_image_view" />

		<TextView
			android:id="@+id/like_image_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:text="100"
			android:textColor="@color/white"
			android:textSize="18sp"
			android:textStyle="bold"
			app:layout_constraintBottom_toBottomOf="@id/gradient_image_view"
			app:layout_constraintEnd_toEndOf="@id/gradient_image_view"
			app:layout_constraintTop_toTopOf="@id/gradient_image_view"
			app:layout_constraintVertical_bias="0.95" />

		<ImageView
			android:id="@+id/like_image_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:src="@drawable/like_icon"
			app:layout_constraintBottom_toTopOf="@id/like_image_text"
			app:layout_constraintEnd_toEndOf="@id/like_image_text"
			app:layout_constraintStart_toStartOf="@id/like_image_text" />


		<TextView
			android:id="@+id/time_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:text="60"
			android:textColor="@color/white"
			android:textSize="18sp"
			android:textStyle="bold"
			app:layout_constraintBottom_toBottomOf="@id/like_image_text"
			app:layout_constraintEnd_toStartOf="@id/like_image_text" />


		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:src="@drawable/time_icon"
			app:layout_constraintBottom_toTopOf="@id/time_text_view"
			app:layout_constraintEnd_toEndOf="@id/time_text_view"
			app:layout_constraintStart_toStartOf="@id/time_text_view"
			app:tint="@color/white" />


		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/name_text_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:ellipsize="end"
			android:fontFamily="@font/alata"
			android:maxLength="50"
			android:maxLines="1"
			android:paddingStart="8dp"
			android:paddingEnd="8dp"
			android:text="@string/title"
			android:textColor="@color/dark_text_color"
			android:textSize="24sp"
			app:layout_constraintTop_toBottomOf="@id/gradient_image_view" />


		<ImageView
			android:id="@+id/vegan_check_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="16dp"
			android:src="@drawable/check_icon"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/name_text_view" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/vegan_icon_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="6dp"
			android:text="@string/vegan"

			android:textColor="@color/dark_text_color"
			android:textSize="16sp"
			app:layout_constraintBottom_toBottomOf="@id/vegan_check_icon"
			app:layout_constraintStart_toEndOf="@id/vegan_check_icon"
			app:layout_constraintTop_toTopOf="@id/vegan_check_icon" />


		<ImageView
			android:id="@+id/cheap_check_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:src="@drawable/check_icon"
			app:layout_constraintStart_toEndOf="@id/vegan_icon_text"
			app:layout_constraintTop_toBottomOf="@id/name_text_view" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/cheap_check_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="6dp"
			android:text="@string/cheap"
			android:textColor="@color/dark_text_color"
			android:textSize="16sp"
			app:layout_constraintBottom_toBottomOf="@id/cheap_check_icon"
			app:layout_constraintStart_toEndOf="@id/cheap_check_icon"
			app:layout_constraintTop_toTopOf="@id/cheap_check_icon" />


		<ImageView
			android:id="@+id/healthy_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:src="@drawable/check_icon"
			app:layout_constraintStart_toEndOf="@id/cheap_check_text_view"
			app:layout_constraintTop_toBottomOf="@id/name_text_view" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/healthy_icon_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="6dp"
			android:text="@string/healthy"
			android:textColor="@color/dark_text_color"
			android:textSize="16sp"
			app:layout_constraintBottom_toBottomOf="@id/healthy_icon"
			app:layout_constraintStart_toEndOf="@id/healthy_icon"
			app:layout_constraintTop_toTopOf="@id/healthy_icon" />


		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/healthy_icon">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/description_text_view"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingStart="8dp"
					android:paddingEnd="8dp"
					android:paddingBottom="8dp"
					android:textColor="@color/dark_text_color"
					android:textSize="16sp" />

			</LinearLayout>
		</ScrollView>

	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>